--- a/docs/css/modern.css
+++ b/docs/css/modern.css
@@ -1,8 +1,11 @@
-﻿.markdown {
-  color: #444;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 1.2em;
-  line-height: 1.7em;
+﻿@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto+Slab:300,400');
+.markdown {
+  color: #333;
+  font-family: 'Roboto Slab', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.8em;
+  text-align: justify;
 }
 .markdown a {
   color: #0645ad;
@@ -25,7 +28,11 @@
   outline: 0;
 }
 .markdown p {
-  margin: 1em 0;
+  margin: 8px;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 .markdown img {
   max-width: 100%;
@@ -39,33 +46,31 @@
   font-weight: normal;
   color: #111;
   line-height: 1.1em;
+  text-align: left;
+  clear: right;
 }
 .markdown h1 {
   margin-top: 0;
   border-bottom: solid;
   border-bottom-width: thick;
-  border-bottom-color: #f0f5ff;
+  border-bottom-color: #eee;
 }
 .markdown h2,
 .markdown h3 {
   margin-top: 1.5em;
-  background-color: #f0f5ff;
+  background-color: #eee;
   padding: 0.25em;
   border-radius: 4px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
 }
 .markdown blockquote {
   color: #444;
-  font-style: italic;
-  font-weight: lighter;
-  text-align: center;
-  margin: 1em 3em 1em 3em;
+  font-weight: 300;
+  text-align: right;
+  margin-left: 30%;
+  max-width: 70%;
   padding: 1em;
-  border: solid;
-  border-color: #f0f5ff;
-  border-width: 1px;
-  border-radius: 4px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
+  border: none;
 }
 .markdown hr {
   display: block;
@@ -78,17 +83,21 @@
 }
 .markdown code,
 .markdown pre {
-  font-family: 'Lucida Sans Typewriter', monospace;
+  font-family: 'Roboto Mono', monospace;
   background-color: transparent;
-  font-size: 0.95em;
-  line-height: 1.5em;
+  font-size: 98%;
   tab-size: 4;
   overflow-x: auto;
   overflow-y: hidden;
+  hyphens: none;
 }
 .markdown pre {
   white-space: pre-wrap;
   word-wrap: break-word;
+}
+.markdown p em {
+  font-style: normal;
+  font-weight: 600;
 }
 .markdown b,
 .markdown strong {
@@ -120,11 +129,15 @@
 }
 .markdown ul,
 .markdown ol {
-  margin: 1em 0;
-  padding: 0 0 0 2em;
+  margin: 8px 0;
+  padding: 0 3em 0 3em;
 }
 .markdown ul {
   list-style: circle;
+}
+.markdown li {
+  padding-left: 8px;
+  margin-bottom: 8px;
 }
 .markdown li p:last-child {
   margin: 0;
@@ -132,10 +145,14 @@
 .markdown dd {
   margin: 0 0 0 2em;
 }
-.markdown img {
+.markdown img,
+.markdown svg {
   border: 0;
   -ms-interpolation-mode: bicubic;
   vertical-align: middle;
+  float: right;
+  margin: 0 0 12px 12px;
+  display: block;
 }
 .markdown table {
   border: none;
@@ -144,7 +161,7 @@
   margin-right: auto;
 }
 .markdown tbody tr:nth-child(odd) {
-  background-color: #f0f5ff;
+  background-color: #eee;
 }
 .markdown th,
 .markdown td {
@@ -156,9 +173,4 @@
 }
 .markdown td {
   vertical-align: top;
-}
-.markdown svg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
